external-crates/move/crates/move-compiler/tests/move_2024/parser/macro_identifier_invalid.move
module a::m {
    macro fun foo($0: u64) {
    }
}
